<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:id="@+id/textView1"
		android:layout_width="match_parent" android:text="@string/welcome_text"
		android:layout_weight="0.1"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
		android:layout_width="match_parent" android:layout_weight="1"
		android:text="@string/pwd_instructions"></TextView>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout2"
		android:layout_weight="1" android:orientation="vertical">
		<EditText android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/editText1" android:text="@string/id">
			<requestFocus></requestFocus>
		</EditText>
		<EditText android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/editText2"
			android:inputType="textPassword" android:text="@string/pwd"></EditText>
		<Button android:layout_height="wrap_content" android:text="@string/login"
			android:id="@+id/button1" android:layout_width="wrap_content"
			android:layout_gravity="right"></Button>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout3"
		android:layout_weight="1"></LinearLayout>
</LinearLayout>
