
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:id="@+id/linearLayout1">
	<TextView android:text="@string/welcome_text" android:id="@+id/textView1"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_weight="0.1"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
		android:layout_width="match_parent" android:layout_weight="1" android:text="@string/fin_msg"></TextView>
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/button1"
		android:layout_gravity="center" android:text="@string/fin"></Button>

</LinearLayout>
