<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="match_parent" android:text="@string/welcome_text" android:layout_weight="0.1"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="match_parent" android:text="@string/setup_instructions" android:layout_weight="1"></TextView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_weight="1" android:orientation="vertical">
        <Button android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/button1" android:text="@string/qr_auth" android:layout_width="wrap_content"></Button>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_weight="1" android:orientation="vertical">
        <Button android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/button2" android:text="@string/txt_auth" android:layout_width="wrap_content"></Button>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_weight="1"></LinearLayout>
</LinearLayout>
