<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:id="@+id/textView1"
		android:layout_width="match_parent" android:text="@string/welcome_text" android:layout_weight="1"></TextView>
	<TextView android:text="@string/gesture" android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"></TextView>
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_weight="1">
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button1" android:layout_gravity="center_horizontal" android:text="@string/cont"></Button>
	</LinearLayout>
</LinearLayout>
